[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/pickables.png" type="Texture" id=1]
[ext_resource path="res://Pickable.gd" type="Script" id=2]
[ext_resource path="res://sound/pickup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.7015, 4.67425 )

[node name="Pickable" type="Sprite" groups=[
"pickable",
]]
texture = ExtResource( 1 )
hframes = 8
frame = 7
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
